Eliminate unnecessary bounds change request

* ClientControlled do not have to have a new bounds when
  window is moved to another tree beucase the bounds will
  be controlled by a client. (window_positioning_utility.cc)
* Update bounds locally when the window is added to another display.
* Do not move the display if the bounds is set by geometry change.
  This scenario isn't important right now and will be fixed by
  neww api.

Bug: 862791, b/110171997
TEST: will be covered by a unit test in a separate CL.
Change-Id: I2be5748661c680fb35bdaa1d25a2bd209edc4a7d
Reviewed-on: https://chromium-review.googlesource.com/1134419
Reviewed-by: Dominik Laskowski <domlaskowski@chromium.org>
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574737}
Former-commit-id: caf225a5b277397876aa62a44eb20effe52681ac